Animated checkbox "Burn metadata into image" is ignored during render #120421

Closed
opened 2024-04-09 11:56:53 +02:00 by Serge Lyatin · 3 comments

System Information
Operating system: win10
Graphics card: 1050ti

Blender Version
Broken: 4.1, 4.2

Short description of error
Checkbox keyframes not working during sequence render, only if static render frame by frame.
But animating alpha parameter in text options works as expected.

Exact steps for others to reproduce the error
Render animation in attached file or keyframe Burn into image metadata's checkbox in the new scene and render it

**System Information** Operating system: win10 Graphics card: 1050ti **Blender Version** Broken: 4.1, 4.2 **Short description of error** Checkbox keyframes not working during sequence render, only if static render frame by frame. But animating alpha parameter in text options works as expected. **Exact steps for others to reproduce the error** Render animation in attached file or keyframe _Burn into image_ metadata's checkbox in the new scene and render it
Serge Lyatin added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-04-09 11:56:54 +02:00
Member

Can confirm, will check

Can confirm, will check

ok super !!

ok super !!
Member

Got a fix, will propose shortly

Got a fix, will propose shortly
Philipp Oeser self-assigned this 2024-04-09 14:05:29 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-10 11:19:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120421
No description provided.